[gd_scene load_steps=3 format=3 uid="uid://dc0exh5068ov6"]

[ext_resource type="Script" uid="uid://bq71ks762jcx0" path="res://scripts/observation/localization.gd" id="1_evtbj"]
[ext_resource type="PackedScene" uid="uid://cf8q2ceyjr4aa" path="res://scenes/event/event.tscn" id="3_qfcqe"]

[node name="Localization" type="Node2D"]
script = ExtResource("1_evtbj")
LocalizationType = 1

[node name="MaskArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MaskArea"]

[node name="Event" parent="." instance=ExtResource("3_qfcqe")]
visible = false
location = Vector2(408, 392)
decay_rate = 1

[connection signal="body_entered" from="MaskArea" to="." method="_on_mask_area_body_entered"]
[connection signal="body_exited" from="MaskArea" to="." method="_on_mask_area_body_exited"]
